--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-spring/types": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^5.14.6",
+    "@types/react-transition-group": "^4.4.10",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.17.4",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1",
+    "react-spring": "^9.7.3",
     "react-telegram-auth": "^1.0.4",
+    "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
