--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.17.4",
+    "immer": "^10.0.3",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
@@ -33,10 +34,11 @@
     "react-spring": "^9.7.3",
     "react-telegram-auth": "^1.0.4",
     "react-transition-group": "^4.4.5",
-    "socket.io-client": "^4.7.2",
+    "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
